--- a/src/pages/icharts/index.scss
+++ b/src/pages/icharts/index.scss
@@ -5,6 +5,7 @@
 
 .icharts {
   background: rgb(255, 255, 255);
+  font-family: Arial, Helvetica, sans-serif;
 
   pre {
     border: #0e0e0e dashed medium;
